--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main container">
+<div class="main white container">
 
 {% if deck.unsaved %}
 <div class="alert alert-danger" role="alert" id="deck-unsaved-alert"><span class="fa fa-exclamation-triangle"></span> This deck has unsaved changes. Please save the deck or cancel the changes before making further edits.</div>
