--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -15,7 +15,7 @@ var CardDB, CardNames;
 
 {% block body %}
 
-<div class="main container">
+<div class="main white container">
 
 <div class="row">
 
