--- a/src/AppBundle/Resources/views/Builder/no-decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/no-decks.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="jumbotron" id="no-deck-available">
-  <div class="main container">
+  <div class="main white container">
     <h1>What, no deck?</h1>
     <p>Decks are awesome. You can <span class="fake-inline-button text-primary"><span class="fa fa-pencil"></span> Edit</span> them until you're satisfied,
     	then <span class="fake-inline-button text-primary"><span class="fa fa-share"></span> Publish</span> them for others to discuss.
