--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -24,7 +24,7 @@
 	</div>
 </div>
 
-<div class="main container">
+<div class="main white container">
 	<div class="row">
 		<div class="col-md-6">
 			<div id="deck-content" style="margin-bottom:10px"></div>
