--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,39 @@
 {% extends 'AppBundle::layout.html.twig' %}
+{% import "AppBundle::macros.html.twig" as macros %}
 
 {% block body %}
 
-<div class="jumbotron">
-<div class="container">
-<h1 class="site-title">Thr<span style="position:relative">o<span class="icon icon-power" style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB</h1>
+<div class="main container">
+<h1 class="site-title hidden-xs">Thr<span style="position:relative">o<span class="icon icon-power" style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB</h1>
 <div class="site-slogan">Deckbuilder for A Game of Thrones LCG 2nd Edition</div>
 </div> <!-- .container -->
+
+<div class="main white container" style="background-color:transparent">
+    <div class="row">
+    {% for data in decklists_by_faction %}
+    <div class="col-md-6" style="margin-bottom:30px">
+        <div class="bg-faction bg-{{ data.faction.code }}" style="padding:10px 10px 5px 10px">
+            <div class="media">
+              <div class="media-left" style="font-size:30px">
+                  <span class="icon icon-{{ data.faction.code }}"></span>
+              </div>
+              <div class="media-body">
+                  <h4 class="media-heading"><a href="{{ path('decklist_detail',{decklist_id:data.decklist.id,decklist_name:data.decklist.nameCanonical}) }}">{{ data.decklist.name }}</a></h4>
+                  <div class="small">by {{ macros.username_with_reputation(data.decklist.user) }} &middot; <time datetime="{{ data.decklist.dateCreation|date('c') }}">{{ data.decklist.dateCreation|date('M d, Y') }}</time></div>
+              </div>
+            </div>
+        </div>
+        <div style="background-color: white; padding: 10px 20px 20px 20px">
+            <div class="small pull-right">
+                {{ macros.decklist_social_buttons(data.decklist ) }}
+            </div>
+            <div>{{ data.factions }}</div>
+            <div>{{ data.count_by_type|raw }}</div>
+            <div style="clear:both"></div>
+        </div>
+    </div>
+    {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
