--- a/src/AppBundle/Resources/views/Faction/faction.html.twig
+++ b/src/AppBundle/Resources/views/Faction/faction.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="main container">
+<div class="main white container">
 
 	{% include 'AppBundle:Default:navbar-factions.html.twig' %}
 
