--- a/src/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/AppBundle/Resources/views/Search/search.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main container">
+<div class="main white container">
 	<div class="row">
 		<div class="col-sm-3">
 
