--- a/src/AppBundle/Resources/views/User/profile_public.html.twig
+++ b/src/AppBundle/Resources/views/User/profile_public.html.twig
@@ -2,11 +2,11 @@
 
 {% block body %}
 
-<div class="main container">
+<div class="main white container">
 
 <div class="jumbotron background-{{ user.color }}-10">
   <h1><span class="{{ user.color }}">{{ user.username }}</span>
-  {% if user.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
+  {% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
     <small>{{ user.reputation }}</small></h1>
 	<p>
         Member since {{ user.dateCreation|date('Y-m-d') }}.
