--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<div class="main container">
+<div class="main white container">
 
 {% for flashMessage in app.session.flashbag.get('error') %}
     <div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>{{ flashMessage }}</div>
@@ -89,7 +89,6 @@
 		<td class="decks-actions text-right">
 			<a href="{{ path('deck_edit',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Edit"><span class="fa fa-pencil fa-fw"></span></a>
 			<button class="btn btn-xs btn-default btn-publish-deck{% if deck.problem is not null %} disabled{% endif %}" data-toggle="tooltip" title="Publish"><span class="fa fa-share fa-fw"></span></button>
-			<a href="{{ path('deck_duplicate',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Duplicate"><span class="fa fa-code-fork fa-fw"></span></a>
 			<button class="btn btn-xs btn-default btn-delete-deck" data-toggle="tooltip" title="Delete"><span class="fa fa-trash-o fa-fw"></span></button>
 		</td>
 	</tr>
