--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main container">
+<div class="main white container">
 
 	<div class="row">
 	    <div class="col-md-12">
