--- a/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
+++ b/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
@@ -9,7 +9,7 @@
 		</h4>
 		<div class="username small">
     		by <a href="{{ path('user_profile_public', {user_id:review.user_id,user_name:review.username|e('url')}) }}" class="{{ review.usercolor }}">{{ review.username }}</a>
-    		{% if review.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
+    		{% if review.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
     		<small class="reputation">{{ review.reputation }}</small>
     	</div>
 		<p><small>{{ review.rawtext|raw }}</small></p>
