--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -18,7 +18,7 @@
 <tr class="{% if i%2==0 %}even{% else %}odd{% endif %}">
    {% set card = cards[i] %}
 	<td data-th="Name">
-		{% if card.is_unique == true %}<span class="icon-unique"></span>{% endif %}
+        <span class="icon icon-{{ card.type_code}} fg-{{ card.faction_code }}"></span>
 		<a href="{{ card.url }}" class="card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
 	</td>
 	<td data-th="Faction">{{ card.faction_name }}</td>
