--- a/src/AppBundle/Resources/views/Search/display.html.twig
+++ b/src/AppBundle/Resources/views/Search/display.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-<div class="main container">
+<div class="main white container">
 
 {{ searchbar|raw }}
 
