--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="main container">
+<div class="main white container">
 
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
