correct style for card modale

--- a/src/AppBundle/Resources/views/Modale/card.html.twig
+++ b/src/AppBundle/Resources/views/Modale/card.html.twig
@@ -14,7 +14,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-sm-6 modal-image"></div>
-                    <div class="col-sm-6 modal-info"></div>
+                    <div class="col-sm-6 modal-info card-content"></div>
                 </div>
             </div>
             <div class="modal-footer">
