--- a/src/AppBundle/Resources/views/Pack/index.html.twig
+++ b/src/AppBundle/Resources/views/Pack/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Pack list</h1>
+<div class="main white container">
+<h1>Pack list</h1>
 
     <table class="records_list">
         <thead>
@@ -52,4 +53,5 @@
             </a>
         </li>
     </ul>
+</div>
     {% endblock %}
