--- a/src/AppBundle/Resources/views/Card/index.html.twig
+++ b/src/AppBundle/Resources/views/Card/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Card list</h1>
+<div class="main white container">
+<h1>Card list</h1>
 
     <table class="records_list" style="table-layout:fixed;width:100%">
         <thead>
@@ -48,4 +49,5 @@
             </a>
         </li>
     </ul>
+</div>
     {% endblock %}
