--- a/src/AppBundle/Resources/views/Type/new.html.twig
+++ b/src/AppBundle/Resources/views/Type/new.html.twig
@@ -1,7 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Type creation</h1>
+<div class="main white container">
+<h1>Type creation</h1>
 
     <form action="{{ path('admin_type_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
@@ -17,4 +18,5 @@
         </a>
     </li>
 </ul>
+</div>
 {% endblock %}
