--- a/src/AppBundle/Resources/views/Type/show.html.twig
+++ b/src/AppBundle/Resources/views/Type/show.html.twig
@@ -1,7 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Type</h1>
+<div class="main white container">
+<h1>Type</h1>
 
     <table class="record_properties">
         <tbody>
@@ -51,4 +52,5 @@
         </form>
     </li>
 </ul>
+</div>
 {% endblock %}
