--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -42,7 +42,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{{ path('decks_list') }}">My Decks</a></li>
             <li><a href="{{ path('decklists_list') }}">Decklists</a></li>
-            <li class="hidden-xs dropdown">
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Cards <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="{{ path('cards_search') }}">Advanced Search</a></li>
