--- a/src/AppBundle/Resources/views/Modale/card.html.twig
+++ b/src/AppBundle/Resources/views/Modale/card.html.twig
@@ -13,7 +13,7 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm-6 modal-image"></div>
+                    <div class="col-sm-6 modal-image hidden-xs"></div>
                     <div class="col-sm-6 modal-info card-content"></div>
                 </div>
             </div>
