--- a/src/AppBundle/Resources/views/Default/about.html.twig
+++ b/src/AppBundle/Resources/views/Default/about.html.twig
@@ -10,5 +10,13 @@
 <p>This website is dedicated to providing a fast, powerful and exhaustive deck builder and search engine for A Game of Thrones: The Card Game Second Edition cards, along with card descriptions and card images.</p>
 <p>This website is optimized for mobile browsing (WebKit).</p>
 
+<h3>Credits</h3>
+
+<p>I would like to thank especially:</p>
+<ul>
+    <li>SP for providing the domain name</li>
+    <li>The Crazy Bear-Riders for testing before release, especially mplain and alexmonk</li>
+    <li><a href="http://agotgame.com/en">agotgame</a> for the idea of the color-coded type icons</li>
+</ul>
 </div>
 {% endblock %}
