--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -1,7 +1,9 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block javascripts %}
-	<script src="{{ asset('/bundles/app/js/ui.deckedit.js') }}"></script>
+	{% javascripts '@AppBundle/Resources/public/js/ui.deckedit.js' %}
+	<script src="{{ asset_url }}"></script>
+	{% endjavascripts %}
 	<script type="text/javascript">
 	app.deck.json = {{ deck|json_encode|raw }};
 	</script>
