--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -1,7 +1,9 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block javascripts %}
-<script src="{{ asset('/bundles/app/js/ui.decklist_search.js') }}"></script>
+	{% javascripts '@AppBundle/Resources/public/js/ui.decklist_search.js' %}
+	<script src="{{ asset_url }}"></script>
+	{% endjavascripts %}
 <script type="text/javascript">
 $(function () {
 	var type = {{ type|json_encode|raw }};
