--- a/src/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/AppBundle/Resources/views/Search/search.html.twig
@@ -1,7 +1,9 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block javascripts %}
-	<script src="{{ asset('/bundles/app/js/ui.decklist_search.js') }}"></script>
+	{% javascripts '@AppBundle/Resources/public/js/ui.decklist_search.js' %}
+	<script src="{{ asset_url }}"></script>
+	{% endjavascripts %}
 {% endblock %}
 
 {% block body %}
