use makeDisposition for attachment filenames; fix #8

--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -10,7 +10,7 @@
 <div class="col-md-6 col-md-offset-3">
 <div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title" style="line-height:2em"><img src="/apple-touch-icon.png" alt="Logo" style="height:2em"> thronesdb Authentication</h3>
+<h3 class="panel-title" style="line-height:2em"><img src="/icon-120.png" alt="Logo" style="height:2em"> thronesdb Authentication</h3>
 </div>
 <div class="panel-body">
   <div class="form">
